# stock_price_notify

./: .gitignore  README.md  main.py  pyproject.toml
.github/: keepalive
.github/workflows/: keepalive.yml  vix-alert.yml
tests/: test_main.py
